tests/error/main.tpc
int main (int){
	/* my main return 0 */
	return 0;
}
